cmake_minimum_required(VERSION 2.8)
project( change_levels )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( change_levels.out change_levels.cpp )
target_link_libraries( change_levels.out ${OpenCV_LIBS} )
SET( CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -Werror -Wextra")